# django-rest-logger

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: run-static-checks.yml  run-tests.yml
apilogger/: middleware.py  utils.py
apilogger/tests/: test_logger.py
restlogger/: conf.py  middleware.py  mixins.py  utils.py
restlogger/tests/: conftest.py  test_logger.py  test_middleware.py  test_mixin.py  test_utils.py
