[tool.poetry]
name = "restlogger"
version = "0.1.0"
description = "Detailed logger for python REST api"
authors = ["Bee Dev <dev@beefree.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3"
PyJWT = "^2"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^21.6b0"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.902"
tox = "^3.20.1"
coverage = "^5.3.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
