[tool.poetry]
name = "restlogger"
version = "0.1.0"
description = "Detailed logger for python REST api"
authors = ["Bee Dev <dev@beefree.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">2"
PyJWT = "^2"
djangorestframework = "^3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
isort = "^5"
mypy = "^1.0.0"
tox = "^4.4.5"
coverage = "^7.1.0"
ipdb = "^0.13"
pytest-django = "^4"
black = "^23.1.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.0.4"
pytest-cov = "^4.0.0"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 119